--- a/style.css
+++ b/style.css
@@ -4,6 +4,44 @@ html, body {
     overflow: hidden;
     font-family: 'Roboto', sans-serif;
 }
+#timeleft {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 10px;
+    right: 50px;
+    font-size: 25px;
+    color: white;
+}
+#time {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 10px;
+    right: 10px;
+    font-size: 25px;
+    color: white;
+}
+#scoreNotification {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 10px;
+    left: 120px;
+    font-size: 25px;
+    color: rgba(255, 255, 255, 0.8);
+    opacity: 0;
+    transition: opacity .2s;
+}
+#scoreTracker {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 10px;
+    left: 10px;
+    font-size: 25px;
+    color: white;
+}
 #start {
     height: 100vh;
     padding-top: 33vh;
@@ -68,4 +106,33 @@ html, body {
 #bar {
     stroke: white;
     stroke-width: 10px;
+}
+#gameover {
+    height: 100vh;
+    padding-top: 18vh;
+    background: #e55a23;
+}
+#gowrapper {
+    color: white;
+    text-align: center;
+    font-size: 50px;
+    padding: 30px;
+}
+#score {
+    margin-bottom: 60px;
+    margin-top: -35px;
+    font-size: 120px;
+}
+#reset {
+    border-width: 0;
+    border-radius: 0;
+    background-color: white;
+    color: #e55a23;
+    transition: background-color .5s;
+    width: 250px;
+    height: 70px;
+    font-size: 40px;
+}
+#reset:hover {
+    background-color: rgb(255, 202, 189);
 }
