--- a/style.css
+++ b/style.css
@@ -12,15 +12,17 @@ html, body {
     right: 50px;
     font-size: 25px;
     color: white;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #time {
     position: absolute;
     margin: 0;
     padding: 0;
     top: 10px;
-    right: 10px;
+    right: 15px;
     font-size: 25px;
     color: white;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #scoreNotification {
     position: absolute;
@@ -41,6 +43,7 @@ html, body {
     left: 10px;
     font-size: 25px;
     color: white;
+    text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 #start {
     height: 100vh;
@@ -53,6 +56,7 @@ html, body {
     background: white;
     margin: 0 auto;
     padding: 0;
+    box-shadow: 0 0 17px 0 rgba(0, 0, 0, 0.3);
 }
 #wrapper > div {
     color: #ffae22;
@@ -83,6 +87,7 @@ html, body {
     border-width: 0;
     border-radius: 0;
     overflow: hidden;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.2);
 }
 #startbtn > span {
     position: relative;
@@ -122,6 +127,7 @@ html, body {
     margin-bottom: 60px;
     margin-top: -35px;
     font-size: 120px;
+    text-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
 }
 #reset {
     border-width: 0;
