--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ html, body {
     margin: 0 auto;
     padding: 0;
     box-shadow: 0 0 17px 0 rgba(0, 0, 0, 0.3);
+    position: relative;
 }
 #wrapper > div {
     color: #ffae22;
@@ -163,4 +164,15 @@ html, body {
 #reset:hover > #resetIcon {
     opacity: 1;
     transform: scale(1.55) rotate(0deg);
+}
+#settingsBtn {
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    fill: #444;
+    transition: transform .3s;
+    transform: rotate(-45deg);
+}
+#settingsBtn:hover {
+    transform: rotate(0deg);
 }
